# ctfhoard

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: README.md
data/catalog/Nautilus-Institute__quals-2022/: challenges.jsonl
data/catalog/Nautilus-Institute__quals-2023/: challenges.jsonl
data/catalog/cryptohack__ctf_archive/: challenges.jsonl
data/catalog/google__google-ctf/: challenges.jsonl
data/catalog/google_ctf/: challenges.jsonl
data/catalog/hackropole/: challenges.jsonl
data/catalog/juiceshop/: challenges.jsonl
data/staging_batch/catalog/1N3__Exploits/: challenges.jsonl
data/staging_batch/catalog/Escapingbug__ancypwn/: challenges.jsonl
data/staging_batch/catalog/Fineas__Me-CTF/: challenges.jsonl
data/staging_batch/catalog/HackerDom__ructfe-2018/: challenges.jsonl
seeds/: official_repos.yaml
src/ctfhoard/: __init__.py  cli.py  corpus.py  dedup.py  discover.py  hf.py  http.py  licenses.py  mirror.py  netguard.py  normalize.py  pipeline.py  ratelimit.py  schema.py  storage.py
src/ctfhoard/connectors/: __init__.py  base.py  ctftime.py  git_repo.py  hackropole.py  juiceshop.py
tests/: test_corpus.py  test_ctftime.py  test_discover.py  test_engine.py  test_git_repo.py  test_hackropole.py  test_hf.py  test_juiceshop.py  test_pipeline.py
tests/fixtures/: ctftime_events.json  ctftime_task.html  ctftime_task_empty.html  ctftime_tasks.html  ctftime_tasks_empty.html  ctftime_writeup_external.html  ctftime_writeup_inline.html  hackropole_challenge.html  hackropole_sitemap.xml  juiceshop_sample.yml
(+14 files in other folders)
